proxy runs on JRE 8, 9 and 10
Use java.util.Base64 instead of the jaxb version. Jaxb must be added with
--add-modules in jdks 9 and 10.